<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profile_top_section"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/brown_500"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/bands_name"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/archivo_bold"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/img_item_photo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_medium"
            android:paddingBottom="40dp"
            android:text="@string/profile_email"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>