<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/detail_band_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/detail_photo_description"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:id="@+id/detail_band_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/archivo_bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/detail_band_photo"
            tools:text="Name"
            />
        <TextView
            android:id="@+id/detail_band_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/archivo_medium"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/detail_band_name"
            tools:text="Deskripsi"
            />
        <TextView
            android:id="@+id/detail_band_member_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/archivo_semibold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/band_member_title"
            app:layout_constraintTop_toBottomOf="@id/detail_band_desc"
            tools:text="Members:"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_band_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_band_member_title"
            />
        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/action_share"
            app:layout_constraintTop_toBottomOf="@id/rv_band_members"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>